[package]
name = "fyrox-book-code"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { git = "https://github.com/FyroxEngine/Fyrox", rev = "2650b077b08c5b6e8d07c2a69c7817c919dc7408" }
fyroxed_base = { git = "https://github.com/FyroxEngine/Fyrox", rev = "2650b077b08c5b6e8d07c2a69c7817c919dc7408" }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
glow = "0.16.0"