[package]
name = "fyrox-book-code"
version = "1.0.0"
edition = "2021"

[dependencies]
fyrox = { git = "https://github.com/FyroxEngine/Fyrox", rev = "1f5df507f8518808cba50559fbca7b4f1dde9743" }
fyroxed_base = { git = "https://github.com/FyroxEngine/Fyrox", rev = "1f5df507f8518808cba50559fbca7b4f1dde9743" }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
glow = "0.16.0"