[package]
name = "fyrox-book-code"
version = "1.0.0"
edition = "2021"

[dependencies]
fyrox = { git = "https://github.com/FyroxEngine/Fyrox", rev = "16dcf6e910e7665ceb73056a96ef1446e5662329" }
fyroxed_base = { git = "https://github.com/FyroxEngine/Fyrox", rev = "16dcf6e910e7665ceb73056a96ef1446e5662329" }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
glow = { git = "https://github.com/grovesNL/glow", rev = "d645b97f1e26bb1a79b73f77c1c29312cdeca5c2" }