[package]
name = "fyrox-book-code"
version = "1.0.0"
edition = "2021"

[dependencies]
fyrox = { git = "https://github.com/FyroxEngine/Fyrox", rev = "54e995a0ce05dd64390213e4791b78604cb602cb" }
fyroxed_base = { git = "https://github.com/FyroxEngine/Fyrox", rev = "54e995a0ce05dd64390213e4791b78604cb602cb" }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
glow = "0.17.0"